# ril

./: .gitignore  Cargo.toml  gnu.plot  plot.gnuplot
benches/: bench.rs
src/: codec.rs  lib.rs  main.rs  options.rs
src/stores/: custom.rs  mod.rs  sqlite.rs
