[package]
name = "ril"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
heed = "0.20.0-alpha.0"
roaring = "0.10.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
